--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "monaco-editor-webpack-plugin": "^2.1.0",
     "style-loader": "^2.0.0",
