--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A React + TS wrapper for Monaco Editor",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
     "build": "webpack",
     "start": "webpack serve --hot --inline --progress --port 5000 --open"
   },
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
