--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "build": "webpack",
-    "start": "webpack serve --hot --inline --progress --port 5000 --open"
+    "start": "webpack serve --hot --inline --progress --port 5000 --open",
+    "test": "is-ci test:ci test:watch",
+    "test:ci": "npm run test:coverage",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch"
   },
   "repository": {
     "type": "git",
@@ -19,11 +24,18 @@
   },
   "homepage": "https://github.com/tlakomy/react-monaco#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "monaco-editor": "^0.21.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
@@ -33,8 +45,12 @@
     "eslint": "^7.16.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "is-ci-cli": "^2.1.2",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
     "monaco-editor-webpack-plugin": "^2.1.0",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
